add sass configuration and some siple sass style rule

--- a/modules/experiences/client/views/edit-experience.client.view.html
+++ b/modules/experiences/client/views/edit-experience.client.view.html
@@ -42,7 +42,7 @@
           <div class="form-group" ng-show="specificationsTemp.length === 0">
             <label>No medium Specifications</label>
           </div>
-          <div class="form-group" ng-show="specificationsTemp.length > 0">
+          <div class="form-group cl-formRow" ng-show="specificationsTemp.length > 0">
             <label>Medium Specifications</label>
             <div class="form-horizontal">
               <div class="form-group" ng-repeat="specification in specificationsTemp">
